--- a/CuaHangTienLoi.Web/Views/QuanTriHoaDon/Index.cshtml
+++ b/CuaHangTienLoi.Web/Views/QuanTriHoaDon/Index.cshtml
@@ -4,80 +4,91 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<div class="container mt-5">
-    <div class="main-ct">
+<br />
 
-
-        <div class="table-wp">
-            @if (Model != null)
+@if (Model != null)
+{
+    int i = 1;
+    <table id="Mytable" class="tablesorter table">
+        <thead>
+            <tr>
+                <th>STT</th>
+                @*<th>Tên Khách Hàng</th>*@
+                <th>Người nhận</th>
+                <th>Địa chỉ</th>
+                <th>Số ĐT</th>
+                @*<th>Email</th>*@
+                <th>Thời gian đặt hàng</th>
+                @*<th>Ghi chú</th>*@
+                <th>Tổng hoá đơn</th>
+                <th>Trạng thái</th>
+                <th>Tình trạng</th>
+                @*<th>Ghi Chú</th>*@
+                <th>Chức năng</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
             {
-                int i = 1;
-                <table id="Mytable" class="tablesorter table">
-                    <thead>
-                        <tr>
-                            <th style="width:40px;">STT</th>
-                            @*<th>Tên Khách Hàng</th>*@
-                            <th>Người Nhận</th>
-                            <th>Địa Chỉ</th>
-                            <th>Số ĐT</th>
-                            <th>Email</th>
-                            <th>Ngày ĐH</th>
-                            <th>Ghi chú</th>
-                            <th>Giá Tiền</th>
-                            <th>Trạng thái</th>
-                            @*<th>Ghi Chú</th>*@
-                            @*<th style="width:135px">Chức năng</th>*@
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
+                <tr>
+                    <td>@i</td>
+                    @*<td>@item.User.TenKhachHang</td>*@
+                    <td>@item.HoTenNguoiMua</td>
+                    <td>@item.DiaChi</td>
+                    <td>@item.DienThoai</td>
+                    @*<td>@item.Email</td>*@
+                    <td>@item.NgayDat</td>
+                    @*<td>@item.GhiChu</td>*@
+                    @*<td style="text-align:center">@item.NgayGiaoHang.ToString("dd-MM-yyyy")</td>*@
+                    <td>@item.TongHoaDon.ToString("N0") VNĐ</td>
+                    <td>
+                        @if (@item.TinhTrangDonHang == 3)
                         {
-                            var text = "";
-                            <tr>
-                                <td style="text-align: center">@i</td>
-                                @*<td>@item.User.TenKhachHang</td>*@
-                                <td>@item.HoTenNguoiMua</td>
-                                <td>@item.DiaChi</td>
-                                <td>@item.DienThoai</td>
-                                <td>@item.Email</td>
-                                <td style="text-align:center">@item.NgayDat.ToString("dd-MM-yyyy")</td>
-                                <td>@item.GhiChu</td>
-                                @*<td style="text-align:center">@item.NgayGiaoHang.ToString("dd-MM-yyyy")</td>*@
-                                <td style="text-align:center">@item.TongHoaDon.ToString("N0")</td>
-                                <td style="text-align:center">
-
-                                    @if (@item.TrangThai)
-                                    {
-                                        text = "Đã thanh toán";
-                                    }
-                                    else
-                                    {
-                                        text = "Chưa thanh toán";
-                                    }
-                                    @text
-                                </td>
-                                @*<td>@item.GhiChu</td>*@
-                                @*<td style="text-align: center">
-                                       <a href="/Manager/EditChuDe?t=" class="sub-sm"><i class="fa fa-pencil"></i></a>
-                                       <a href="/Manager/DeleteChuDe?t=" class="sub-sm"><i class="fa fa-times"></i></a>
-                                    </td>*@
-                            </tr>
-                            i++;
+                            <span class="badge badge-success">Đã thanh toán</span>
                         }
+                        else
+                        {
 
-
-                    </tbody>
-                </table>
+                            if (@item.TrangThai == 1)
+                            {
+                                <span class="badge badge-success">Đã thanh toán</span>
+                            }
+                            if (@item.TrangThai == 2)
+                            {
+                                <span class="badge badge-success">Chưa thanh toán</span>
+                            }
+                            if (@item.TrangThai == 3)
+                            {
+                                <span class="badge badge-warning">Đã hoàn tiền</span>
+                            }
+                        }
+                    </td>
+                    <td>
+                        @if (@item.TinhTrangDonHang == 1)
+                        {
+                            <p>Đặt hàng thành công</p>
+                        }
+                        @if (@item.TinhTrangDonHang == 2)
+                        {
+                            <p>Đang giao hàng</p>
+                        }
+                        @if (@item.TinhTrangDonHang == 3)
+                        {
+                            <p> Hoàn thành </p>
+                        }
+                        @if (@item.TinhTrangDonHang == 4)
+                        {
+                            <p>Đã huỷ</p>
+                        }
+                    </td>
+                    <td>
+                        <a href="/QuanTriHoaDon/EditHoaDon?t=@item.MaHoaDon" class="btn-link">Chỉnh sửa</a>
+                    </td>
+                </tr>
+                i++;
             }
 
-            <script type="text/javascript">
-                $(document).ready(function () {
-                    $('#Mytable').dataTable({
-                        "lengthMenu": [[15, 25, 50, -1], [15, 25, 50, "All"]]
-                    });
-                });
-            </script>
-        </div>
-    </div>
-    <div class="clear"></div>
-</div>
+
+        </tbody>
+    </table>
+}
