--- a/CuaHangTienLoi.Web/Views/QuanTriSanPham/Index.cshtml
+++ b/CuaHangTienLoi.Web/Views/QuanTriSanPham/Index.cshtml
@@ -4,95 +4,70 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<div class="container mt-5">
-    <div class="title-main">
-        @using (Html.BeginForm("CreateSanPham", "QuanTriSanPham", FormMethod.Post))
-        {
-            <input class="btn btn-primary m-3" type="submit" value="Thêm" name="add" />
-        }
-    </div>
-    <div class="main-ct">
-
-        <div class="table-wp">
-            @if (Model != null)
+<div class="title-main">
+    @using (Html.BeginForm("CreateSanPham", "QuanTriSanPham", FormMethod.Post))
+    {
+        <input class="btn btn-primary m-3" type="submit" value="Thêm" name="add" />
+    }
+</div>
+@if (Model != null)
+{
+    int i = 1;
+    <table id="Mytable" class="tablesorter table">
+        <thead>
+            <tr>
+                <th style="width:40px;">STT</th>
+                <th>Tên sản phẩm</th>
+                <th>Ảnh Sản Phẩm</th>
+                <th>Đơn Giá</th>
+                @*<th>Sale Off</th>*@
+                <th>Số lượng</th>
+                @*<th>Lượt Mua</th>*@
+                <th>Ngày Đăng</th>
+                <th style="width:135px">Chức năng</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
             {
-                int i = 1;
-                <table id="Mytable" class="tablesorter table">
-                    <thead>
-                        <tr>
-                            <th style="width:40px;">STT</th>
-                            <th>Tên sản phẩm</th>
-                            <th>Ảnh Sản Phẩm</th>
-                            <th>Đơn Giá</th>
-                            <th>Sale Off</th>
-                            <th>Tình Trạng</th>
-                            @*<th>Lượt Mua</th>*@
-                            <th>Ngày Đăng</th>
-                            <th style="width:135px">Chức năng</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
+                var text = "";
+                <tr>
+                    <td style="text-align: center">@i</td>
+                    <td style="width:200px;">@item.TenSanPham</td>
+                    <td style="text-align:center"><img src="~/Content/img/product/@item.LinkAnh" width="50" style="border:4px solid #fff;box-shadow:0 0 7px #ebebeb" /></td>
+                    <td>@item.DonGia.ToString("N0") VNĐ</td>
+                    @*<td>
+                        @if (item.PhanTramGiamGia > 0)
                         {
-                            var text = "";
-                            <tr>
-                                <td style="text-align: center">@i</td>
-                                <td style="width:200px;">@item.TenSanPham</td>
-                                <td style="text-align:center"><img src="~/Content/img/product/@item.LinkAnh" width="50" style="border:4px solid #fff;box-shadow:0 0 7px #ebebeb" /></td>
-                                <td>@item.DonGia</td>
-                                <td>
-                                    @if (item.PhanTramGiamGia > 0)
-                                    {
 
-                                        @(item.DonGia - ((item.DonGia * item.PhanTramGiamGia) / 100))
-                                    }
-                                    else
-                                    {
-                                        @item.DonGia
-                                    }
-                                </td>
-                                <td>
-                                    @if (item.TinhTrang)
-                                    {
-                                        text = "Còn Hàng";
-                                    }
-                                    else
-                                    {
-                                        text = "Hết Hàng";
-                                    }
-                                    @text
-                                </td>
-                                @*<td>@item.LuotMua</td>*@
-                                <td>@item.NgayDang.ToString("dd-MM-yyyy")</td>
-                                <td style="text-align: center">
-                                    <div class="dropdown">
-                                        <button class="btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <i class="fa fa-ellipsis-h text-black-50"></i>
-                                        </button>
-                                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                                            <a href="/QuanTriSanPham/EditSanPham?t=@item.MaSanPham" class="dropdown-item d-flex">Chỉnh sửa</a>
-                                            <a href="/QuanTriSanPham/DeleteSanPham?t=@item.MaSanPham" class="dropdown-item d-flex">Xoá</a>
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
-                            i++;
+                            @(item.DonGia - ((item.DonGia * item.PhanTramGiamGia) / 100))
                         }
-
-
-                    </tbody>
-                </table>
+                        else
+                        {
+                            @item.DonGia
+                        }
+                    </td>*@
+                    <td>
+                        @item.SoLuong
+                    </td>
+                    @*<td>@item.LuotMua</td>*@
+                    <td>@item.NgayDang.ToString("dd-MM-yyyy")</td>
+                    <td style="text-align: center">
+                        <div class="dropdown">
+                            <button class="btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fa fa-ellipsis-h text-black-50"></i>
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                                <a href="/QuanTriSanPham/EditSanPham?t=@item.MaSanPham" class="dropdown-item d-flex">Chỉnh sửa</a>
+                                <a href="/QuanTriSanPham/DeleteSanPham?t=@item.MaSanPham" class="dropdown-item d-flex">Xoá</a>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                i++;
             }
 
-            <script type="text/javascript">
-                $(document).ready(function () {
-                    $('#Mytable').dataTable({
-                        "lengthMenu": [[15, 25, 50, -1], [15, 25, 50, "All"]]
-                    });
-                });
-            </script>
-        </div>
-    </div>
-    <div class="clear"></div>
-</div>
 
+        </tbody>
+    </table>
+}
