--- a/CuaHangTienLoi.Web/Views/Shared/_Layout.cshtml
+++ b/CuaHangTienLoi.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title</title>
 
     <link rel="stylesheet" href="~/Content/Site.css" />
-    <link rel="stylesheet" href="~/Content/style.css" />
+    <link rel="stylesheet" href="~/Content/styles.css" />
     <link rel="stylesheet" href="~/Content/vendors/fontawesome/css/all.css" />
     <link rel="stylesheet" href="~/Content/css/product.css" />
 
@@ -145,7 +145,7 @@
                                 }
                                 else
                                 {
-                                    <a class="dropdown-item" href="" id="regiter-tv">Đơn hàng</a>
+                                    <a class="dropdown-item" href="@Url.Action("HoaDon", "QuanTriHoaDon")" id="regiter-tv">Đơn hàng</a>
                                     <a class="dropdown-item" href="" id="regiter-tv">Tài khoản</a>
                                     <a class="dropdown-item" href="/Home/DangXuat" id="regiter-tv">Đăng Xuất</a>
                                 }
@@ -415,24 +415,12 @@
                                            required />
                                 </div>
 
-                                <label for="exampleInputAdd">Giới tính</label><br />
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input"
-                                           type="radio"
-                                           name="gioitinh"
-                                           id="male"
-                                           value="male" />
-                                    <label class="form-check-label"
-                                           for="male">Nam</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input"
-                                           type="radio"
-                                           name="gioitinh"
-                                           id="female"
-                                           value="female" />
-                                    <label class="form-check-label"
-                                           for="female">Nữ</label>
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1">Giới tính</label>
+                                    <select name="gioitinh" id="gioitinh" class="custom-select">
+                                        <option value="false">Nam</option>
+                                        <option value="true">Nữ</option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
